<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll_hint"
    android:theme="@android:style/Theme.Material.Light"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/app_name"
                    android:textSize="34sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            style="?attr/textInputFilledStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="?attr/textInputFilledStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mother_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            style="?attr/textInputFilledStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                        <RadioButton
                            android:id="@+id/radioButton"
                            style="@android:style/Widget.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/red" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            style="@android:style/Widget.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/green" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            style="@android:style/Widget.CompoundButton.RadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/blue" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/checkBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                        <Button
                            android:id="@+id/button"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/login"
                            app:icon="?android:attr/fingerprintAuthDrawable"
                            app:iconGravity="textStart" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button2"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/send_love"
                            app:icon="@android:drawable/btn_star"
                            app:iconGravity="textStart" />
                </LinearLayout>
        </LinearLayout>
</ScrollView>